Thursday, December 06 2001, Al Riddoch
	* Strict C++ compliance fixes, tested with gcc3.

Thursday, November 29 2001, Al Riddoch
	* src/atlas_utils.h: Avoid copying twice when casting.
	* src/Utils.cpp, src/Utils.h: Return const objects.
	* src/Types.cpp, src/Types.h, src/Entity.cpp: Remove support for
	  bmedian attribute now deprecated.

Thursday, November 29 2001, James Turner

	* Changed to actually call World::mark[Inv|V]isible from
	  Entity::setVisible; thus the IEC gets some testing.
	* Handle various edge-cases in the IEC correctly, notably
	  when there are no buckets defined
	* Various comment and dead-code clean-ups.

Monday, November 26 2001, James Turner
	* Re-built dispatch system with various new features:
	* Dispatcher is now abstract, since much logic has been factored
	  out in the StdBranchDispatcher
	* Split Encap dispatcher apart so it only performs de-encapsulation,
	  no type/class selection
	* Class dispatcher now selects the most specialised binding for
	  a type; i.e if handlers for 'SIGHT' and 'INFO' exist, only the
	  one for 'SIGHT' will be fired.
	* Updated all the users of dispatchers to use the new structure
	  and interfaces - tested and most things seem to work, including
	  IG entry. OOG chat emotes are broken, will fix tomorrow.

	* Handle Bounding boxes, the 'BMEDIAN' attribute and velocity/
	  position better in Entity.
	* Added BBox to Types
	
Saturday, November 24 2001, James Turner

	* Cleaned up logging output for TypeInfo.cpp
	* Extended World to provide a protected mark[Inv/V]isible interface to
	  entities, so they can control their placement in the invisible entity
	  cache.
	* Added InvisibleEntityCache.[cpp/h] and hooked it into World.cpp
	* Added World::tick() method to do periodic updates (eventually motion
	  prediction and so on), initally just flusing the InvisibleEntityCache
	  as necessary.
	* Updated Time to include an operator- as well as operator+